fixed hover + text align

--- a/app/assets/stylesheets/components/_container-voucher.scss
+++ b/app/assets/stylesheets/components/_container-voucher.scss
@@ -24,6 +24,7 @@
   font-size: 18px;
   color: white;
   padding-bottom: 5px;
+  text-align: center;
 }
 
 .top-section {
